--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -10,8 +10,10 @@ server {
 
     location / {
         try_files $uri $uri/ /index.php?$args;
+    	# try_files $uri $uri/ /index.php?q=$uri&$args;
     }
 
+    # Add trailing slash to */wp-admin requests.
     rewrite /wp-admin$ $scheme://$host$uri/ permanent;
 
     location ~ \.php$ {
@@ -21,7 +23,44 @@ server {
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
+    }
 
+    #for trendsmag assets
+    location /assets {
+    	rewrite ^/assets/(.*) /web/wp-content/themes/tm/assets/$1 break;
+    }
+    location /plugins {
+    	rewrite ^/plugins/(.*) /web/wp-content/plugins/$1 break;
+    }
+    location /files {
+    	rewrite ^/files/(.*)/(.*)/(.*)/(.*)\.(jpg|jpeg|png|gif)$ /web/wp-content/uploads/cache/$1/$2/$3/$4.$5 break;
+    }
+
+    # Directives to send expires headers and turn off 404 error logging.
+    #location ~* ^.+\.(ogg|ogv|svg|svgz|eot|otf|woff|mp4|ttf|rss|atom|jpg|jpeg|gif|png|ico|zip|tgz|gz|rar|bz2|doc|xls|exe|ppt|tar|mid|midi|wav|bmp|rtf)$ {
+    #       access_log off; log_not_found off; expires max;
+    #}
+
+    location = /favicon.ico {
+        log_not_found off;
+        access_log off;
+    }
+    location = /robots.txt {
+        allow all;
+        log_not_found off;
+        access_log off;
+    }
+    # Deny all attempts to access hidden files such as .htaccess, .htpasswd, .DS_Store (Mac).
+    # Keep logging the requests to parse later (or to pass to firewall utilities such as fail2ban)
+    location ~ /\. {
+        deny all;
+    }
+
+    # Deny access to any files with a .php extension in the uploads directory
+    # Works in sub-directory installs and also in multisite network
+    # Keep logging the requests to parse later (or to pass to firewall utilities such as fail2ban)
+    location ~* /(?:uploads|files)/.*\.php$ {
+        deny all;
     }
 
     error_log /var/log/nginx/error.log;
