--- a/docker/.env.dist
+++ b/docker/.env.dist
@@ -10,3 +10,15 @@ MYSQL_ROOT_PASSWORD=root
 MYSQL_DATABASE=db
 MYSQL_USER=user
 MYSQL_PASSWORD=pass
+MYSQL_HOST=trendsmagnet_wp_mariadb_1
+WP_DEBUG=0
+
+AUTH_KEY='pon aquí tu frase aleatoria'
+SECURE_AUTH_KEY='pon aquí tu frase aleatoria'
+LOGGED_IN_KEY='pon aquí tu frase aleatoria'
+NONCE_KEY='pon aquí tu frase aleatoria'
+AUTH_SALT='pon aquí tu frase aleatoria'
+SECURE_AUTH_SALT='pon aquí tu frase aleatoria'
+LOGGED_IN_SALT='pon aquí tu frase aleatoria'
+NONCE_SALT='pon aquí tu frase aleatoria'
+
