--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -19,7 +19,12 @@ services:
           - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
           - ./volume/logs/nginx:/var/log/nginx
           - ./volume/uploads:/application/web/wp-content/uploads
-
+      environment:
+#        MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+        MYSQL_DATABASE: ${MYSQL_DATABASE}
+        MYSQL_USER: ${MYSQL_USER}
+        MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+        MYSQL_HOST: ${MYSQL_HOST}
     php:
       build: php-fpm
       working_dir: /application
