--- a/docker/.env.dist
+++ b/docker/.env.dist
@@ -11,6 +11,9 @@ MYSQL_DATABASE=db
 MYSQL_USER=user
 MYSQL_PASSWORD=pass
 MYSQL_HOST=trendsmagnet_wp_mariadb_1
+
+WP_HOME='https://www.trendsmag.net/'
+WP_SITEURL='https://www.trendsmag.net/web/'
 WP_DEBUG=0
 
 AUTH_KEY='pon aquí tu frase aleatoria'
