--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -26,8 +26,10 @@ services:
           - ${APP_PATH}:/application
           - ./volume/uploads:/application/web/wp-content/uploads
       environment:
-#        MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
         MYSQL_DATABASE: ${MYSQL_DATABASE}
         MYSQL_USER: ${MYSQL_USER}
         MYSQL_PASSWORD: ${MYSQL_PASSWORD}
         MYSQL_HOST: ${MYSQL_HOST}
+        WP_HOME: ${WP_HOME}
+        WP_SITEURL: ${WP_SITEURL}
+        WP_DEBUG: ${WP_DEBUG}
