--- a/docker/docker-compose.override.yml.dist
+++ b/docker/docker-compose.override.yml.dist
@@ -1,11 +1,13 @@
-version: "2"
+version: "3"
 services:
     mariadb:
       volumes:
         - ./volume/db/dump:/docker-entrypoint-initdb.d
 #      ports:
 #        - "3306:3306"
+      restart: unless-stopped
 
     webserver:
       ports:
-          - "104:80"
+          - $WEBSERVER_PORT:80
+      restart: unless-stopped
