--- a/docker/docker-compose.override.yml.dist
+++ b/docker/docker-compose.override.yml.dist
@@ -7,7 +7,7 @@ services:
 #        - "3306:3306"
       restart: unless-stopped
 
-    webserver:
+    nginx:
       ports:
           - $WEBSERVER_PORT:80
       restart: unless-stopped
