--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3"
 services:
     mariadb:
+      container_name: ${COMPOSE_PROJECT_NAME}_mariadb
       image: mariadb:10.1
       working_dir: /application
       volumes:
@@ -11,7 +12,8 @@ services:
         MYSQL_USER: ${MYSQL_USER}
         MYSQL_PASSWORD: ${MYSQL_PASSWORD}
 
-    webserver:
+    nginx:
+      container_name: ${COMPOSE_PROJECT_NAME}_nginx
       image: nginx:alpine
       working_dir: /application
       volumes:
@@ -19,7 +21,9 @@ services:
           - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
           - ./volume/logs/nginx:/var/log/nginx
           - ./volume/uploads:/application/web/wp-content/uploads
+          -
     php:
+      container_name: ${COMPOSE_PROJECT_NAME}_php
       build: php-fpm
       working_dir: /application
       volumes:
