update php and add nginx security

--- a/docker/.env.dist
+++ b/docker/.env.dist
@@ -15,7 +15,8 @@ MYSQL_HOST=trendsmagnet_wp_mariadb_1
 WP_HOME='https://www.trendsmag.net/'
 WP_SITEURL='https://www.trendsmag.net/web/'
 WP_DEBUG=0
-$WEBSERVER_PORT=127.0.0.1:17001
+WP_ENV=production
+WEBSERVER_PORT=127.0.0.1:17001
 
 AUTH_KEY='pon aquí tu frase aleatoria'
 SECURE_AUTH_KEY='pon aquí tu frase aleatoria'
