--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -16,7 +16,6 @@ services:
       working_dir: /application
       volumes:
           - ${APP_PATH}:/application
-          - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
           - ./volume/logs/nginx:/var/log/nginx
           - ./volume/uploads:/application/web/wp-content/uploads
 
@@ -34,6 +33,7 @@ services:
         WP_HOME: ${WP_HOME}
         WP_SITEURL: ${WP_SITEURL}
         WP_DEBUG: ${WP_DEBUG}
+        WP_ENV: ${WP_ENV}
         AUTH_KEY: ${AUTH_KEY}
         SECURE_AUTH_KEY: ${SECURE_AUTH_KEY}
         LOGGED_IN_KEY: ${LOGGED_IN_KEY}
