--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -6,6 +6,74 @@ server {
     client_max_body_size 108M;
 
     root /application;
+
+    # allow AJAX requests in themes and plugins
+    location ~ ^/wp-admin/admin-ajax.php$ { allow all; include php.conf; }
+
+    # Optional HTTP authentication for wp-login and wp-admin areas
+    #location ~* /(wp-login\.php) {
+    #    #limit_req zone=xwplogin burst=1 nodelay;
+    #    auth_basic "Authorization Required";
+    #    auth_basic_user_file /etc/nginx/htpasswd;
+    #    include php.conf;
+    #}
+    #location ~* /wp-admin/.*\.php$ {
+    #    auth_basic "Authorization Required";
+    #    auth_basic_user_file /etc/nginx/htpasswd;
+    #    include php.conf;
+    #}
+
+    #Deny access to wp-content folders for suspicious files
+    location ~* ^/(wp-content)/(.*?)\.(zip|gz|tar|bzip2|7z)\$ { deny all; }
+    location ~ ^/wp-content/uploads/sucuri { deny all; }
+    location ~ ^/wp-content/updraft { deny all; }
+
+    # Deny access to any files with a .php extension in the uploads directory
+    # Works in sub-directory installs and also in multisite network
+    location ~* /(?:uploads|files)/.*\.php\$ {
+        deny all;
+    }
+
+    # Deny access to uploads that aren’t images, videos, music, etc.
+    location ~* ^/wp-content/uploads/.*.(html|htm|shtml|php|js|swf|css)$ {
+        deny all;
+    }
+
+    # Block PHP files in content directory.
+    location ~* /wp-content/.*\.php\$ {
+      deny all;
+    }
+    # Block PHP files in includes directory.
+    location ~* /wp-includes/.*\.php\$ {
+      deny all;
+    }
+    # Block PHP files in uploads, content, and includes directory.
+    location ~* /(?:uploads|files|wp-content|wp-includes)/.*\.php\$ {
+      deny all;
+    }
+
+    # Make sure files with the following extensions do not get loaded by nginx because nginx would display the source code, and these files can contain PASSWORDS!
+    location ~* \.(engine|inc|info|install|make|module|profile|test|po|sh|.*sql|theme|tpl(\.php)?|xtmpl)\$|^(\..*|Entries.*|Repository|Root|Tag|Template)\$|\.php_
+    {
+        return 444;
+    }
+    #nocgi
+    location ~* \.(pl|cgi|py|sh|lua)\$ {
+        return 444;
+    }
+    #disallow
+    location ~* (w00tw00t) {
+        return 444;
+    }
+    location ~* /(\.|wp-config\.php|wp-config\.txt|changelog\.txt|readme\.txt|readme\.html|license\.txt) { deny all; }
+
+    # block hotlinking
+    #location ~ .(gif|png|jpe?g)$ {
+    #     valid_referers none blocked ${HOST} *.${HOST};
+    #     if ($invalid_referer) {
+    #        return   403;
+    #    }
+    #}
     index index.php;
 
     location / {
@@ -17,12 +85,12 @@ server {
     rewrite /wp-admin$ $scheme://$host$uri/ permanent;
 
     location ~ \.php$ {
-
-        try_files $uri /index.php =404;
-        fastcgi_pass php:9000;
-        fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        include fastcgi_params;
+        include php.conf;
+        #try_files $uri /index.php =404;
+        #fastcgi_pass php:9000;
+        #fastcgi_index index.php;
+        #fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        #include fastcgi_params;
     }
 
     #for trendsmag assets
@@ -52,16 +120,16 @@ server {
     }
     # Deny all attempts to access hidden files such as .htaccess, .htpasswd, .DS_Store (Mac).
     # Keep logging the requests to parse later (or to pass to firewall utilities such as fail2ban)
-    location ~ /\. {
-        deny all;
-    }
+    #location ~ /\. {
+    #    deny all;
+    #}
 
     # Deny access to any files with a .php extension in the uploads directory
     # Works in sub-directory installs and also in multisite network
     # Keep logging the requests to parse later (or to pass to firewall utilities such as fail2ban)
-    location ~* /(?:uploads|files)/.*\.php$ {
-        deny all;
-    }
+    #location ~* /(?:uploads|files)/.*\.php$ {
+    #    deny all;
+    #}
 
     error_log /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
