--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -1,1 +1,6 @@
 FROM nginx:alpine
+
+# @todo create htpasswd here from env variables/arguments
+#ADD htpasswd /etc/nginx/htpasswd
+ADD php.conf /etc/nginx/php.conf
+ADD nginx.conf /etc/nginx/conf.d/default.conf
