--- a/.env.dist
+++ b/.env.dist
@@ -7,17 +7,17 @@ MYSQL_USER=user
 MYSQL_PASSWORD=pass
 MYSQL_HOST=trendsmagnet_wp_mariadb_1
 
-WP_HOME='https://www.trendsmag.net/'
-WP_SITEURL='https://www.trendsmag.net/'
+WP_HOME=https://www.trendsmag.net/
+WP_SITEURL=https://www.trendsmag.net/
 WP_DEBUG=0
 WP_ENV=production
 WEBSERVER_PORT=127.0.0.1:80
 
-AUTH_KEY='pon aquí tu frase aleatoria'
-SECURE_AUTH_KEY='pon aquí tu frase aleatoria'
-LOGGED_IN_KEY='pon aquí tu frase aleatoria'
-NONCE_KEY='pon aquí tu frase aleatoria'
-AUTH_SALT='pon aquí tu frase aleatoria'
-SECURE_AUTH_SALT='pon aquí tu frase aleatoria'
-LOGGED_IN_SALT='pon aquí tu frase aleatoria'
-NONCE_SALT='pon aquí tu frase aleatoria'
+AUTH_KEY=secret
+SECURE_AUTH_KEY=secret
+LOGGED_IN_KEY=secret
+NONCE_KEY=secret
+AUTH_SALT=secret
+SECURE_AUTH_SALT=secret
+LOGGED_IN_SALT=secret
+NONCE_SALT=secret
